--- a/CSS/alturaLargura.html
+++ b/CSS/alturaLargura.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <title>Altura e Largura</title>
     <style>
+        html{
+            height: 100%;
+        }
         body {
+            height: 100%;
             font-size: 40px;
             background-color: coral;
         }
@@ -16,6 +20,12 @@
 
         span {
             background-color: dodgerblue;
+        }
+        span, div{
+            width: 49%;
+            height: 200px;
+            height: 50%;
+            display: inline-block;
         }
     </style>
 </head>
