--- a/CSS/heranca.html
+++ b/CSS/heranca.html
@@ -4,8 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Herança</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
     <style>
         /* ... */
+        body{
+            font-family: 'Source Sans Pro', sans-serif;
+            font-size: 40px;
+            border: solid 3px red;
+            padding: 50px;
+        }
+        div {
+            border: inherit;/* Palavras usada para herdar elementos da mãe que não vem por padrão*/
+            padding: inherit;
+        }
     </style>
 </head>
 
