--- a/CSS/seletores.html
+++ b/CSS/seletores.html
@@ -6,7 +6,57 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        /*{
+            color: #000;
+            background-color: #fff;
+        }
+
+        .tag{
+            color: #000;
+            background-color: #fff;
+        }
+
+        #aprovados{
+            color: #000;
+            background-color: #fff;
+        }
+
+        #aninhado > div{
+            color: #000;
+            background-color: #fff;
+        }
+        
+        #aninhado section{
+            color: #000;
+            background-color: #fff;
+        }
+
+        p + ul{
+            color: #000;
+            background-color: #fff;
+        }
+        
+        p ~ ul{
+            color: #000;
+            background-color: #fff;
+        }
+
+        [feira]{
+            color: #000;
+            background-color: #fff;
+        }
+        [feira=casa]{
+            color: #000;
+            background-color: #fff;
+        }
+        section > :nth-child(odd){
+            color: #000;
+            background-color: #fff;
+        }
+        section > span:nth-of-type(2){
+            color: #000;
+            background-color: #fff;
+        }*/
     </style>
 </head>
 
@@ -29,7 +79,7 @@
             </ol>
             <div id='aninhado' class='tag'>
                 <div class="tag">
-                    <section class='tag'>
+                    <section class='tag nolabel'>
                         <span class='tag'>1</span>
                         <p class='tag'>2</p>
                         <span class='tag'>3</span>
