Um melhor conhecimento de POSITION. E dois desafios feitos.

--- a/CSS/cores.html
+++ b/CSS/cores.html
@@ -11,6 +11,20 @@
             https://coolors.co/
             http://paletton.com/
         */
+        body{
+            /*
+             *background-color: green; // nome
+             *background-color: #00ff00; // hexadecimal
+             *background-color: #0f0; // hexadecimal
+             *background-color: #00ff00aa;// hexadecimal com transparencia
+             *background-color: #0f0a; // Hexadecimal com transparencia
+             *background-color: rgb(00, 255, 00); // rgb decimal 
+             *background-color: rgba(00, 255, 00, 0.8); // rgb decimal com transparencia
+             *background-color: hsl(118, 44%, 65%); // HSL
+             *background-color: hsla(118, 44%, 65%, 0.5);// HSL com transparencia
+             */
+            background-color: #0f0a;
+        }
     </style>
 </head>
 
