--- a/CSS/overflow.html
+++ b/CSS/overflow.html
@@ -9,6 +9,12 @@
             height: 100px;
             width: 260px;
             border: solid 3px;
+            overflow: scroll;
+            /*overflow: hidden;// O conteudo da div não sai dela
+             *overflow-y: hidden;
+             *overflow: scroll;// Coloca scroll para caso conteudo for maior que a div
+             *overflow-x: scroll;
+            */
         }
     </style>
 </head>
