--- a/CSS/tamanhoBox.html
+++ b/CSS/tamanhoBox.html
@@ -20,8 +20,9 @@
             height: 300px;
             padding: 100px;
             border: solid 20px;
-            /*box-sizing: content-box;
-            box-sizing: border-box;*/
+            /*box-sizing: content-box;//o padrão
+             *box-sizing: border-box;//o usado agora
+            */
         }
     </style>
 </head>
