--- a/CSS/float.html
+++ b/CSS/float.html
@@ -8,21 +8,31 @@
         body {
             background-color: #222;
         }
+        div{
+            height: 150px;
+            width: 150px;
+            float: left;
+        }
 
         .c1 {
             background-color: red;
+            float: right;
         }
 
         .c2 {
             background-color: green;
+            clear: right;
+            float: left;
         }
         
         .c3 {
             background-color: blue;
+            clear: both;
         }
 
         .c4 {
             background-color: orange;
+            float: right;
         }
     </style>
 </head>
