--- a/CSS/unidades2.html
+++ b/CSS/unidades2.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <title>Unidades #02</title>
     <style>
-        /* ... */
+        .fora{
+            position: relative;
+            background-color: orange;
+            width: 400px;
+            height: 400px;
+            padding: 50px;
+        }
+        .dentro{
+            position: static; /* conteudo */
+            position: relative; /* conteudo */
+            position: absolute; /* conteudo + padding */
+            position: fixed; /* viewport */
+            background-color: mediumvioletred;
+            height: 100px;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
