--- a/CSS/flexbox2.html
+++ b/CSS/flexbox2.html
@@ -6,7 +6,50 @@
     <title>Flexbox #02</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div {
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+
+        .flex-container div {
+            box-sizing: border-box;
+        }
+
+        .flex-container {
+            display: flex;
+            height: 300px;
+            width: 600px;
+        }
+
+        .flex-container div:nth-child(3)/*Aplicar esse conteudo para o terceiro filho do elemento com classe 'flex-container'*/ {
+            background-color: indianred;
+            order: 1;/*Manipular a order dos elemento dentro do 'flex-container'*/
+            order: 0;
+            order: -1;
+            align-self: center;/*muda como o item esta alinhado dentro da 'flex-container'*/
+            align-self: flex-end;
+            align-self: flex-start;
+            align-self: stretch;
+        }
+
+        .flex-container div {
+            width: 100px;
+            flex-grow: 0;
+            flex-grow: 1;/*coloca peso no elemento dentro do 'flex-container'*/
+        }
+
+        .flex-container div:nth-child(1) {
+            flex-grow: 2;
+        }
+
+        .flex-container {
+            width: 300px;
+            flex-shrink: 1;
+        }
+
+        .flex-container div:nth-child(1) {
+            flex-shrink: 5;
+        }
     </style>
 </head>
 
